fix: Standardize all real-time alerts to 1m suppression and correct suppress.fields
Changes:
- Suppression periods: All real-time alerts (001-005) now use 1m
  001: 5m → 1m
  002: 30m → 1m
  003: 12h → 1m
  004: 30m → 1m
  005: 1m (no change)

- Suppress.fields corrected to match query output fields:
  001: device, admin, config_path (was: _time, device, user, cfgpath)
  002: device, vpn_user, remote_ip (was: user, remip)
  003: logid (no change - already correct)
  004: device, issue (was: devname)
  005: device, message (was: devname, msg)

- Alert comments updated with standardized format
  ⚠️  Suppression: 1m (all real-time alerts standardized)

Ensures:
- Consistent 1-minute suppression across all real-time alerts
- Alert suppression works correctly based on actual query output fields
- No suppression on internal fields like _time

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -5,6 +5,7 @@
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 001: Config Change (Real-time Alert)
+# ⚠️  Suppression: 1m (all real-time alerts standardized)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [001.alert_FortiGate_Config_Change]
 description = Real-time FortiGate configuration change alerts
@@ -18,8 +19,8 @@ schedule_priority = highest
 alert.track = 1
 alert.digest_mode = 0
 alert.suppress = 1
-alert.suppress.fields = _time, device, user, cfgpath
-alert.suppress.period = 5m
+alert.suppress.fields = device, admin, config_path
+alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔧 *Config Change Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*👤 Admin:* `$result.admin$`\n*🔧 Method:* `$result.access_method$`\n*📝 Path:* `$result.config_path$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Review Required_
@@ -27,6 +28,7 @@ search = index=fw (logid=0100044546 OR logid=0100044547) | eval device = coalesc
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 002: VPN Failure (Real-time Alert)
+# ⚠️  Suppression: 1m (all real-time alerts standardized)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [002.alert_FortiGate_VPN_Failure]
 description = Real-time VPN connection failures
@@ -39,8 +41,8 @@ schedule_priority = high
 alert.track = 1
 alert.digest_mode = 0
 alert.suppress = 1
-alert.suppress.fields = user, remip
-alert.suppress.period = 30m
+alert.suppress.fields = device, vpn_user, remote_ip
+alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔒 *VPN Failure Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*👤 User:* `$result.vpn_user$`\n*🌐 IP:* `$result.remote_ip$`\n*⚠️  Status:* `$result.vpn_status$`\n*📋 Reason:* `$result.vpn_reason$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: MEDIUM | Investigate_
@@ -48,6 +50,7 @@ search = index=fw (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | e
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 003: LogDev Warning (Real-time Alert)
+# ⚠️  Suppression: 1m (all real-time alerts standardized)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [003.alert_FortiAnalyzer_LogDev_Warning]
 description = FortiAnalyzer log device warnings
@@ -61,7 +64,7 @@ alert.track = 1
 alert.digest_mode = 0
 alert.suppress = 1
 alert.suppress.fields = logid
-alert.suppress.period = 12h
+alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n📡 *LogDev Warning*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*⚠️  Issue:* `$result.issue_type$`\n*🚨 Level:* `$result.severity_level$`\n*📋 Message:* `$result.description$`\n\n*🔍 LogID:* `$result.logid$`\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: MEDIUM | Check System_
@@ -69,6 +72,7 @@ search = index=fw logid=220001 | eval issue_type = case(like(msg, "%offline%"), 
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 004: Metrics Anomaly (Real-time Alert)
+# ⚠️  Suppression: 1m (all real-time alerts standardized)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [004.alert_FortiGate_Metrics_Anomaly]
 description = System performance alerts (CPU/Memory high)
@@ -82,8 +86,8 @@ schedule_priority = high
 alert.track = 1
 alert.digest_mode = 0
 alert.suppress = 1
-alert.suppress.fields = devname
-alert.suppress.period = 30m
+alert.suppress.fields = device, issue
+alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔥 *Performance Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*⚠️  Issue:* `$result.issue$`\n*📋 Message:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Check Load_
@@ -91,7 +95,7 @@ search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) | e
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 005: System Critical (Real-time Alert)
-# ⚠️  Suppression: 1m (reduced from 15m per user request)
+# ⚠️  Suppression: 1m (all real-time alerts standardized)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [005.alert_FortiGate_System_Critical]
 description = System critical events and errors
@@ -105,7 +109,7 @@ schedule_priority = highest
 alert.track = 1
 alert.digest_mode = 0
 alert.suppress = 1
-alert.suppress.fields = devname, msg
+alert.suppress.fields = device, message
 alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
