fix: Add CPU/Memory threshold filtering to alert 004 to prevent spam
Problem: Alert 004 was triggering on ALL performance statistics events,
including devices with CPU=0% and low memory usage, causing massive spam.

Root Cause: logid=0100032001 is a generic performance statistics event
that fires for all devices, with no value-based filtering.

Solution:
- Extract CPU and memory percentages using regex from msg field
- Filter to only alert when CPU >= 80% OR memory >= 80%
- Update issue categorization based on actual values
- Add CPU/memory percentages to Slack message
- Add cpu_pct and mem_pct to query output for visibility

Impact: Eliminates false positive alerts for normal performance levels.
Only genuine high CPU/memory events will trigger alerts now.

Threshold: 80% chosen as industry standard for performance alerts.

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -90,8 +90,8 @@ alert.suppress.fields = device, issue
 alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔥 *Performance Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*⚠️  Issue:* `$result.issue$`\n*📋 Message:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Check Load_
-search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) | eval device = coalesce(devname, "unknown") | eval issue = case(logid=="0100040704", "CPU High", logid=="0100040705", "Memory High", 1=1, "Performance") | eval message = coalesce(msg, "Check system") | table _time, device, issue, message
+action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔥 *Performance Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*⚠️  Issue:* `$result.issue$`\n*💻 CPU:* `$result.cpu_pct$`%\n*🧠 Memory:* `$result.mem_pct$`%\n*📋 Details:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Check Load_
+search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) | eval device = coalesce(devname, "unknown") | rex field=msg "average CPU:\s+(?<cpu_pct>\d+)" | rex field=msg "memory:\s+(?<mem_pct>\d+)" | eval cpu_pct = tonumber(cpu_pct) | eval mem_pct = tonumber(mem_pct) | where (cpu_pct >= 80 OR mem_pct >= 80) | eval issue = case(cpu_pct >= 80 AND mem_pct >= 80, "CPU & Memory High", cpu_pct >= 80, "CPU High", mem_pct >= 80, "Memory High", 1=1, "Performance") | eval message = coalesce(msg, "Check system") | table _time, device, issue, message, cpu_pct, mem_pct
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 005: System Critical (Real-time Alert)
