feat: Convert all 5 alerts to Slack Block Kit JSON format
Changed all Slack messages from simple text to Block Kit JSON:
- 001: Config Change - header + 2 section blocks
- 002: VPN Failure - header + 3 section blocks
- 003: LogDev Warning - header + 3 section blocks
- 004: Performance Alert - header + 3 section blocks (with CPU/Memory%)
- 005: System Critical - header + 3 section blocks

Benefits:
✅ Proper emoji rendering (no more Korean emoji codes)
✅ Structured layout with headers, fields, and dividers
✅ Better visual hierarchy and readability
✅ Consistent formatting across all alerts

Format: Compact single-line JSON for .conf compatibility

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -23,7 +23,7 @@ alert.suppress.fields = device, admin, config_path
 alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔧 *Config Change Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*👤 Admin:* `$result.admin$`\n*🔧 Method:* `$result.access_method$`\n*📝 Path:* `$result.config_path$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Review Required_
+action.slack.param.message = {"blocks":[{"type":"header","text":{"type":"plain_text","text":"🔧 Config Change Alert","emoji":true}},{"type":"section","fields":[{"type":"mrkdwn","text":"*📍 Device:*\n$result.device$"},{"type":"mrkdwn","text":"*👤 Admin:*\n$result.admin$"},{"type":"mrkdwn","text":"*🔧 Method:*\n$result.access_method$"},{"type":"mrkdwn","text":"*📝 Path:*\n$result.config_path$"}]},{"type":"section","fields":[{"type":"mrkdwn","text":"*🕐 Time:*\n$result._time$"},{"type":"mrkdwn","text":"*⚠️ Priority:*\nHIGH | Review Required"}]},{"type":"divider"}]}
 search = index=fw (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval admin = coalesce(user, "system") | eval config_path = coalesce(cfgpath, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | table _time, device, admin, config_path, access_method
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -45,7 +45,7 @@ alert.suppress.fields = device, vpn_user, remote_ip
 alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔒 *VPN Failure Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*👤 User:* `$result.vpn_user$`\n*🌐 IP:* `$result.remote_ip$`\n*⚠️  Status:* `$result.vpn_status$`\n*📋 Reason:* `$result.vpn_reason$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: MEDIUM | Investigate_
+action.slack.param.message = {"blocks":[{"type":"header","text":{"type":"plain_text","text":"🔒 VPN Failure Alert","emoji":true}},{"type":"section","fields":[{"type":"mrkdwn","text":"*📍 Device:*\n$result.device$"},{"type":"mrkdwn","text":"*👤 User:*\n$result.vpn_user$"},{"type":"mrkdwn","text":"*🌐 IP:*\n$result.remote_ip$"},{"type":"mrkdwn","text":"*⚠️ Status:*\n$result.vpn_status$"}]},{"type":"section","text":{"type":"mrkdwn","text":"*📋 Reason:*\n$result.vpn_reason$"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*🕐 Time:*\n$result._time$"},{"type":"mrkdwn","text":"*⚠️ Priority:*\nMEDIUM | Investigate"}]},{"type":"divider"}]}
 search = index=fw (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_user = coalesce(user, "N/A") | eval remote_ip = coalesce(remip, "-") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | eval vpn_reason = coalesce(reason, msg, "No reason") | table _time, device, vpn_user, remote_ip, vpn_status, vpn_reason
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -67,7 +67,7 @@ alert.suppress.fields = logid
 alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n📡 *LogDev Warning*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*⚠️  Issue:* `$result.issue_type$`\n*🚨 Level:* `$result.severity_level$`\n*📋 Message:* `$result.description$`\n\n*🔍 LogID:* `$result.logid$`\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: MEDIUM | Check System_
+action.slack.param.message = {"blocks":[{"type":"header","text":{"type":"plain_text","text":"📡 LogDev Warning","emoji":true}},{"type":"section","fields":[{"type":"mrkdwn","text":"*⚠️ Issue:*\n$result.issue_type$"},{"type":"mrkdwn","text":"*🚨 Level:*\n$result.severity_level$"},{"type":"mrkdwn","text":"*🔍 LogID:*\n$result.logid$"},{"type":"mrkdwn","text":"*🕐 Time:*\n$result._time$"}]},{"type":"section","text":{"type":"mrkdwn","text":"*📋 Message:*\n$result.description$"}},{"type":"section","text":{"type":"mrkdwn","text":"*⚠️ Priority:* MEDIUM | Check System"}},{"type":"divider"}]}
 search = index=fw logid=220001 | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | eval description = coalesce(msg, "No details") | table _time, logid, severity_level, issue_type, description
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -90,7 +90,7 @@ alert.suppress.fields = device, issue
 alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔥 *Performance Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*⚠️  Issue:* `$result.issue$`\n*💻 CPU:* `$result.cpu_pct$`%\n*🧠 Memory:* `$result.mem_pct$`%\n*📋 Details:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Check Load_
+action.slack.param.message = {"blocks":[{"type":"header","text":{"type":"plain_text","text":"🔥 Performance Alert","emoji":true}},{"type":"section","fields":[{"type":"mrkdwn","text":"*📍 Device:*\n$result.device$"},{"type":"mrkdwn","text":"*⚠️ Issue:*\n$result.issue$"},{"type":"mrkdwn","text":"*💻 CPU:*\n$result.cpu_pct$%"},{"type":"mrkdwn","text":"*🧠 Memory:*\n$result.mem_pct$%"}]},{"type":"section","text":{"type":"mrkdwn","text":"*📋 Details:*\n$result.message$"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*🕐 Time:*\n$result._time$"},{"type":"mrkdwn","text":"*⚠️ Priority:*\nHIGH | Check Load"}]},{"type":"divider"}]}
 search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) | eval device = coalesce(devname, "unknown") | rex field=msg "average CPU:\s+(?<cpu_pct>\d+)" | rex field=msg "memory:\s+(?<mem_pct>\d+)" | eval cpu_pct = tonumber(cpu_pct) | eval mem_pct = tonumber(mem_pct) | where (cpu_pct >= 80 OR mem_pct >= 80) | eval issue = case(cpu_pct >= 80 AND mem_pct >= 80, "CPU & Memory High", cpu_pct >= 80, "CPU High", mem_pct >= 80, "Memory High", 1=1, "Performance") | eval message = coalesce(msg, "Check system") | table _time, device, issue, message, cpu_pct, mem_pct
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -113,7 +113,7 @@ alert.suppress.fields = device, message
 alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🚨 *CRITICAL System Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*🔴 Level:* `$result.level$`\n*📋 Message:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: CRITICAL | Immediate Action_
+action.slack.param.message = {"blocks":[{"type":"header","text":{"type":"plain_text","text":"🚨 CRITICAL System Alert","emoji":true}},{"type":"section","fields":[{"type":"mrkdwn","text":"*📍 Device:*\n$result.device$"},{"type":"mrkdwn","text":"*🔴 Level:*\n$result.level$"}]},{"type":"section","text":{"type":"mrkdwn","text":"*📋 Message:*\n$result.message$"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*🕐 Time:*\n$result._time$"},{"type":"mrkdwn","text":"*⚠️ Priority:*\nCRITICAL | Immediate Action"}]},{"type":"divider"}]}
 search = index=fw (level=critical OR level=error) | eval device = coalesce(devname, "unknown") | eval message = coalesce(msg, "Critical event") | table _time, device, level, message
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
