feat: Implement Slack Block Kit alerts for all 5 FortiGate alerts
- Create custom alert action slack_blockkit in alert_actions.conf
- Convert all 5 alerts from simple text to Block Kit format
- Add severity levels: critical, high, medium
- Add message field to queries for Block Kit display
- Use action.slack_blockkit instead of action.slack

Alerts converted:
- 001: Config Change (high)
- 002: VPN Failure (medium)
- 003: LogDev Warning (medium)
- 004: Metrics Anomaly (high)
- 005: System Critical (critical)

Requires deployment:
1. Copy alert_actions.conf to /opt/splunk/etc/apps/search/local/
2. Copy savedsearches.conf to /opt/splunk/etc/apps/search/local/
3. Ensure slack_blockkit_alert.py is in /opt/splunk/etc/apps/search/bin/
4. Set SLACK_BOT_TOKEN environment variable
5. Restart Splunk

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -4,11 +4,11 @@
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 001: Config Change (Real-time Alert)
+# 001: Config Change (Real-time Alert) - Block Kit Format
 # ⚠️  Suppression: 1m (all real-time alerts standardized)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [001.alert_FortiGate_Config_Change]
-description = Real-time FortiGate configuration change alerts
+description = Real-time FortiGate configuration change alerts with Block Kit UI
 disabled = 0
 cron_schedule = * * * * *
 dispatch.earliest_time = rt-1m
@@ -21,17 +21,18 @@ alert.digest_mode = 0
 alert.suppress = 1
 alert.suppress.fields = device, admin, config_path
 alert.suppress.period = 1m
-action.slack = 1
-action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = *🔧 Config Change Alert*\n\n*Device:* $result.device$\n*Admin:* $result.admin$\n*Method:* $result.access_method$\n*Path:* $result.config_path$\n*Time:* $result._time$\n\n⚠️ *Priority:* HIGH | Review Required
-search = index=fw (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval admin = coalesce(user, "system") | eval config_path = coalesce(cfgpath, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | table _time, device, admin, config_path, access_method
+action.slack_blockkit = 1
+action.slack_blockkit.param.channel = #security-firewall-alert
+action.slack_blockkit.param.severity = high
+action.slack_blockkit.param.title = 🔧 Config Change Alert
+search = index=fw (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval admin = coalesce(user, "system") | eval config_path = coalesce(cfgpath, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | eval severity="high" | eval message="Config change on " + device + " by " + admin + " via " + access_method + " - Path: " + config_path | table _time, device, admin, config_path, access_method, severity, message
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 002: VPN Failure (Real-time Alert)
+# 002: VPN Failure (Real-time Alert) - Block Kit Format
 # ⚠️  Suppression: 1m (all real-time alerts standardized)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [002.alert_FortiGate_VPN_Failure]
-description = Real-time VPN connection failures
+description = Real-time VPN connection failures with Block Kit UI
 disabled = 0
 cron_schedule = * * * * *
 dispatch.earliest_time = rt-1m
@@ -43,17 +44,18 @@ alert.digest_mode = 0
 alert.suppress = 1
 alert.suppress.fields = device, vpn_user, remote_ip
 alert.suppress.period = 1m
-action.slack = 1
-action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = *🔒 VPN Failure Alert*\n\n*Device:* $result.device$\n*User:* $result.vpn_user$\n*IP:* $result.remote_ip$\n*Status:* $result.vpn_status$\n*Reason:* $result.vpn_reason$\n*Time:* $result._time$\n\n⚠️ *Priority:* MEDIUM | Investigate
-search = index=fw (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_user = coalesce(user, "N/A") | eval remote_ip = coalesce(remip, "-") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | eval vpn_reason = coalesce(reason, msg, "No reason") | table _time, device, vpn_user, remote_ip, vpn_status, vpn_reason
+action.slack_blockkit = 1
+action.slack_blockkit.param.channel = #security-firewall-alert
+action.slack_blockkit.param.severity = medium
+action.slack_blockkit.param.title = 🔒 VPN Failure Alert
+search = index=fw (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_user = coalesce(user, "N/A") | eval remote_ip = coalesce(remip, "-") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | eval vpn_reason = coalesce(reason, msg, "No reason") | eval severity="medium" | eval message="VPN failure on " + device + " - User: " + vpn_user + " (" + remote_ip + ") - Status: " + vpn_status | table _time, device, vpn_user, remote_ip, vpn_status, vpn_reason, severity, message
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 003: LogDev Warning (Real-time Alert)
+# 003: LogDev Warning (Real-time Alert) - Block Kit Format
 # ⚠️  Suppression: 1m (all real-time alerts standardized)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [003.alert_FortiAnalyzer_LogDev_Warning]
-description = FortiAnalyzer log device warnings
+description = FortiAnalyzer log device warnings with Block Kit UI
 disabled = 0
 cron_schedule = * * * * *
 dispatch.earliest_time = rt-1m
@@ -65,17 +67,18 @@ alert.digest_mode = 0
 alert.suppress = 1
 alert.suppress.fields = logid
 alert.suppress.period = 1m
-action.slack = 1
-action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = *📡 LogDev Warning*\n\n*Issue:* $result.issue_type$\n*Level:* $result.severity_level$\n*LogID:* $result.logid$\n*Time:* $result._time$\n*Message:* $result.description$\n\n⚠️ *Priority:* MEDIUM | Check System
-search = index=fw logid=220001 | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | eval description = coalesce(msg, "No details") | table _time, logid, severity_level, issue_type, description
+action.slack_blockkit = 1
+action.slack_blockkit.param.channel = #security-firewall-alert
+action.slack_blockkit.param.severity = medium
+action.slack_blockkit.param.title = 📡 LogDev Warning
+search = index=fw logid=220001 | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | eval description = coalesce(msg, "No details") | eval severity="medium" | eval message="LogDev issue: " + issue_type + " - " + severity_level | table _time, logid, severity_level, issue_type, description, severity, message
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 004: Metrics Anomaly (Real-time Alert)
+# 004: Metrics Anomaly (Real-time Alert) - Block Kit Format
 # ⚠️  Suppression: 1m (all real-time alerts standardized)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [004.alert_FortiGate_Metrics_Anomaly]
-description = System performance alerts (CPU/Memory high)
+description = System performance alerts (CPU/Memory high) with Block Kit UI
 disabled = 0
 cron_schedule = * * * * *
 dispatch.earliest_time = rt-1m
@@ -88,17 +91,18 @@ alert.digest_mode = 0
 alert.suppress = 1
 alert.suppress.fields = device, issue
 alert.suppress.period = 1m
-action.slack = 1
-action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = *🔥 Performance Alert*\n\n*Device:* $result.device$\n*Issue:* $result.issue$\n*CPU:* $result.cpu_pct$%\n*Memory:* $result.mem_pct$%\n*Details:* $result.message$\n*Time:* $result._time$\n\n⚠️ *Priority:* HIGH | Check Load
-search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) | eval device = coalesce(devname, "unknown") | rex field=msg "average CPU:\s+(?<cpu_pct>\d+)" | rex field=msg "memory:\s+(?<mem_pct>\d+)" | eval cpu_pct = tonumber(cpu_pct) | eval mem_pct = tonumber(mem_pct) | where (cpu_pct >= 80 OR mem_pct >= 80) | eval issue = case(cpu_pct >= 80 AND mem_pct >= 80, "CPU & Memory High", cpu_pct >= 80, "CPU High", mem_pct >= 80, "Memory High", 1=1, "Performance") | eval message = coalesce(msg, "Check system") | table _time, device, issue, message, cpu_pct, mem_pct
+action.slack_blockkit = 1
+action.slack_blockkit.param.channel = #security-firewall-alert
+action.slack_blockkit.param.severity = high
+action.slack_blockkit.param.title = 🔥 Performance Alert
+search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) | eval device = coalesce(devname, "unknown") | rex field=msg "average CPU:\s+(?<cpu_pct>\d+)" | rex field=msg "memory:\s+(?<mem_pct>\d+)" | eval cpu_pct = tonumber(cpu_pct) | eval mem_pct = tonumber(mem_pct) | where (cpu_pct >= 80 OR mem_pct >= 80) | eval issue = case(cpu_pct >= 80 AND mem_pct >= 80, "CPU & Memory High", cpu_pct >= 80, "CPU High", mem_pct >= 80, "Memory High", 1=1, "Performance") | eval message = coalesce(msg, "Check system") | eval severity="high" | table _time, device, issue, message, cpu_pct, mem_pct, severity
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 005: System Critical (Real-time Alert)
+# 005: System Critical (Real-time Alert) - Block Kit Format
 # ⚠️  Suppression: 1m (all real-time alerts standardized)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [005.alert_FortiGate_System_Critical]
-description = System critical events and errors
+description = System critical events and errors with Block Kit UI
 disabled = 0
 cron_schedule = * * * * *
 dispatch.earliest_time = rt-1m
@@ -111,10 +115,11 @@ alert.digest_mode = 0
 alert.suppress = 1
 alert.suppress.fields = device, message
 alert.suppress.period = 1m
-action.slack = 1
-action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = *🚨 CRITICAL System Alert*\n\n*Device:* $result.device$\n*Level:* $result.level$\n*Message:* $result.message$\n*Time:* $result._time$\n\n⚠️ *Priority:* CRITICAL | Immediate Action
-search = index=fw (level=critical OR level=error) | eval device = coalesce(devname, "unknown") | eval message = coalesce(msg, "Critical event") | table _time, device, level, message
+action.slack_blockkit = 1
+action.slack_blockkit.param.channel = #security-firewall-alert
+action.slack_blockkit.param.severity = critical
+action.slack_blockkit.param.title = 🚨 CRITICAL System Alert
+search = index=fw (level=critical OR level=error) | eval device = coalesce(devname, "unknown") | eval message = coalesce(msg, "Critical event") | eval severity="critical" | table _time, device, level, message, severity
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 009: General Event Summary (Dashboard Support)
