feat: Add alert 006 - Anomaly detection for CPU/memory/sessions
- Detects 2x spikes above 7-day baseline
- Monitors: CPU percentage, memory percentage, session count
- Runs every 5 minutes with 15-minute suppression
- Severity: high
- Uses Block Kit format for Slack notifications
- Comprehensive baseline vs current metrics in output

Requested by user: Alert when session count, CPU, or memory
peaks 2x above 7-day average

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -122,6 +122,30 @@ action.slack_blockkit.param.title = 🚨 CRITICAL System Alert
 search = index=fw (level=critical OR level=error) | eval device = coalesce(devname, "unknown") | eval message = coalesce(msg, "Critical event") | eval severity="critical" | table _time, device, level, message, severity
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 006: Anomaly Detection (Scheduled Alert) - Block Kit Format
+# 🔍 Detects 2x spikes in sessions, CPU, memory vs 7-day baseline
+# ⚠️  Suppression: 15m (prevents alert storm during incidents)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[006.alert_FortiGate_Anomaly_Detection]
+description = Anomaly detection for sessions, CPU, and memory (2x above 7-day baseline) with Block Kit UI
+disabled = 0
+cron_schedule = */5 * * * *
+dispatch.earliest_time = -7d
+dispatch.latest_time = now
+enableSched = 1
+schedule_priority = high
+alert.track = 1
+alert.digest_mode = 0
+alert.suppress = 1
+alert.suppress.fields = device, anomaly_type
+alert.suppress.period = 15m
+action.slack_blockkit = 1
+action.slack_blockkit.param.channel = #security-firewall-alert
+action.slack_blockkit.param.severity = high
+action.slack_blockkit.param.title = 📊 Anomaly Detection Alert
+search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) | rex field=msg "average CPU:\\s+(?<cpu_pct>\\d+)" | rex field=msg "memory:\\s+(?<mem_pct>\\d+)" | rex field=msg "sessions:\\s+(?<session_count>\\d+)" | eval device = coalesce(devname, "unknown") | eval cpu_pct = tonumber(cpu_pct) | eval mem_pct = tonumber(mem_pct) | eval session_count = tonumber(session_count) | eval is_recent = if(_time >= relative_time(now(), "-5m"), 1, 0) | stats avg(eval(if(is_recent==0, cpu_pct, null()))) as baseline_cpu, avg(eval(if(is_recent==0, mem_pct, null()))) as baseline_mem, avg(eval(if(is_recent==0, session_count, null()))) as baseline_sessions, avg(eval(if(is_recent==1, cpu_pct, null()))) as current_cpu, avg(eval(if(is_recent==1, mem_pct, null()))) as current_mem, avg(eval(if(is_recent==1, session_count, null()))) as current_sessions by device | where (current_cpu >= baseline_cpu * 2) OR (current_mem >= baseline_mem * 2) OR (current_sessions >= baseline_sessions * 2) | eval anomaly_type = case(current_cpu >= baseline_cpu * 2 AND current_mem >= baseline_mem * 2 AND current_sessions >= baseline_sessions * 2, "All Metrics Spike", current_cpu >= baseline_cpu * 2 AND current_mem >= baseline_mem * 2, "CPU & Memory Spike", current_cpu >= baseline_cpu * 2 AND current_sessions >= baseline_sessions * 2, "CPU & Sessions Spike", current_mem >= baseline_mem * 2 AND current_sessions >= baseline_sessions * 2, "Memory & Sessions Spike", current_cpu >= baseline_cpu * 2, "CPU Spike", current_mem >= baseline_mem * 2, "Memory Spike", current_sessions >= baseline_sessions * 2, "Sessions Spike", 1=1, "Unknown") | eval severity="high" | eval message = "Anomaly: " + anomaly_type + " on " + device + " - CPU: " + tostring(round(current_cpu, 0)) + "% (baseline " + tostring(round(baseline_cpu, 0)) + "%), Memory: " + tostring(round(current_mem, 0)) + "% (baseline " + tostring(round(baseline_mem, 0)) + "%), Sessions: " + tostring(round(current_sessions, 0)) + " (baseline " + tostring(round(baseline_sessions, 0)) + ")" | table _time, device, anomaly_type, current_cpu, baseline_cpu, current_mem, baseline_mem, current_sessions, baseline_sessions, severity, message
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 009: General Event Summary (Dashboard Support)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [009.alert_FortiGate_Event_Summary]
