fix: Simplify alert 006 query - use eventstats instead of conditional stats
- Remove sessions monitoring (CPU/memory only)
- Change from 7-day to 5-minute baseline window
- Use eventstats avg() instead of conditional stats
- Fix regex escape sequences (\s+ not \\s+)
- Add dedup to prevent duplicate alerts
- Much simpler linear logic flow

Previous version used relative_time() inside conditional stats which
doesn't work properly in Splunk. This version uses eventstats which
adds baseline calculation to each event, then simple where filter.

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -123,14 +123,14 @@ search = index=fw (level=critical OR level=error) | eval device = coalesce(devna
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 006: Anomaly Detection (Scheduled Alert) - Block Kit Format
-# 🔍 Detects 2x spikes in sessions, CPU, memory vs 7-day baseline
+# 🔍 Detects 2x spikes in CPU/memory vs 1-hour baseline (간단 버전)
 # ⚠️  Suppression: 15m (prevents alert storm during incidents)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [006.alert_FortiGate_Anomaly_Detection]
-description = Anomaly detection for sessions, CPU, and memory (2x above 7-day baseline) with Block Kit UI
+description = Anomaly detection - CPU/memory 2x above 1-hour baseline
 disabled = 0
 cron_schedule = */5 * * * *
-dispatch.earliest_time = -7d
+dispatch.earliest_time = -1h
 dispatch.latest_time = now
 enableSched = 1
 schedule_priority = high
@@ -143,7 +143,7 @@ action.slack_blockkit = 1
 action.slack_blockkit.param.channel = #security-firewall-alert
 action.slack_blockkit.param.severity = high
 action.slack_blockkit.param.title = 📊 Anomaly Detection Alert
-search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) | rex field=msg "average CPU:\\s+(?<cpu_pct>\\d+)" | rex field=msg "memory:\\s+(?<mem_pct>\\d+)" | rex field=msg "sessions:\\s+(?<session_count>\\d+)" | eval device = coalesce(devname, "unknown") | eval cpu_pct = tonumber(cpu_pct) | eval mem_pct = tonumber(mem_pct) | eval session_count = tonumber(session_count) | eval is_recent = if(_time >= relative_time(now(), "-5m"), 1, 0) | stats avg(eval(if(is_recent==0, cpu_pct, null()))) as baseline_cpu, avg(eval(if(is_recent==0, mem_pct, null()))) as baseline_mem, avg(eval(if(is_recent==0, session_count, null()))) as baseline_sessions, avg(eval(if(is_recent==1, cpu_pct, null()))) as current_cpu, avg(eval(if(is_recent==1, mem_pct, null()))) as current_mem, avg(eval(if(is_recent==1, session_count, null()))) as current_sessions by device | where (current_cpu >= baseline_cpu * 2) OR (current_mem >= baseline_mem * 2) OR (current_sessions >= baseline_sessions * 2) | eval anomaly_type = case(current_cpu >= baseline_cpu * 2 AND current_mem >= baseline_mem * 2 AND current_sessions >= baseline_sessions * 2, "All Metrics Spike", current_cpu >= baseline_cpu * 2 AND current_mem >= baseline_mem * 2, "CPU & Memory Spike", current_cpu >= baseline_cpu * 2 AND current_sessions >= baseline_sessions * 2, "CPU & Sessions Spike", current_mem >= baseline_mem * 2 AND current_sessions >= baseline_sessions * 2, "Memory & Sessions Spike", current_cpu >= baseline_cpu * 2, "CPU Spike", current_mem >= baseline_mem * 2, "Memory Spike", current_sessions >= baseline_sessions * 2, "Sessions Spike", 1=1, "Unknown") | eval severity="high" | eval message = "Anomaly: " + anomaly_type + " on " + device + " - CPU: " + tostring(round(current_cpu, 0)) + "% (baseline " + tostring(round(baseline_cpu, 0)) + "%), Memory: " + tostring(round(current_mem, 0)) + "% (baseline " + tostring(round(baseline_mem, 0)) + "%), Sessions: " + tostring(round(current_sessions, 0)) + " (baseline " + tostring(round(baseline_sessions, 0)) + ")" | table _time, device, anomaly_type, current_cpu, baseline_cpu, current_mem, baseline_mem, current_sessions, baseline_sessions, severity, message
+search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) earliest=-5m latest=now | rex field=msg "average CPU:\s+(?<cpu_pct>\d+)" | rex field=msg "memory:\s+(?<mem_pct>\d+)" | eval device=coalesce(devname,"unknown") | eval cpu_pct=tonumber(cpu_pct) | eval mem_pct=tonumber(mem_pct) | eventstats avg(cpu_pct) as baseline_cpu, avg(mem_pct) as baseline_mem by device | where (cpu_pct >= baseline_cpu * 2) OR (mem_pct >= baseline_mem * 2) | eval anomaly_type=case(cpu_pct >= baseline_cpu * 2 AND mem_pct >= baseline_mem * 2, "CPU & Memory Spike", cpu_pct >= baseline_cpu * 2, "CPU Spike", mem_pct >= baseline_mem * 2, "Memory Spike", 1=1, "Unknown") | eval severity="high" | eval message="Anomaly: " + anomaly_type + " on " + device + " - Current CPU: " + tostring(cpu_pct) + "% (avg " + tostring(round(baseline_cpu,0)) + "%), Memory: " + tostring(mem_pct) + "% (avg " + tostring(round(baseline_mem,0)) + "%)" | dedup device, anomaly_type | table _time, device, anomaly_type, cpu_pct, baseline_cpu, mem_pct, baseline_mem, severity, message
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 009: General Event Summary (Dashboard Support)
