feat: Add proxy configuration support to Slack Block Kit integration
- Add proxy settings to alert_actions.conf (enable, url, port, auth)
- Add proxy configuration UI block to setup.xml
- Update slack_blockkit_alert.py to read and use proxy settings
- Support both HTTP/HTTPS proxy with optional authentication
- Proxy settings optional (disabled by default)
- Regenerate deployment package (71KB, 54 files)

--- a/security_alert/default/alert_actions.conf
+++ b/security_alert/default/alert_actions.conf
@@ -8,3 +8,8 @@ python.version = python3
 
 param.slack_app_oauth_token =
 param.webhook_url =
+param.proxy_enabled = 0
+param.proxy_url =
+param.proxy_port =
+param.proxy_username =
+param.proxy_password =
