fix: Add command field to alert_actions.conf - fixes action X icon issue
- Add command = slack_blockkit_alert.py (critical for Splunk to execute script)
- Bot name and icon are hardcoded in Python script (lines 174-175)
- Follows Splunk official plugin format
- Rebuilt release package (71KB)

Fixes:
- Action showing as X icon in Splunk UI
- Alert action not executing properly

--- a/security_alert/default/alert_actions.conf
+++ b/security_alert/default/alert_actions.conf
@@ -1,4 +1,5 @@
 [slack]
+command = slack_blockkit_alert.py
 is_custom = 1
 label = Send to Slack (Block Kit)
 description = Send formatted alert to Slack using Block Kit
